--- a/index.html
+++ b/index.html
@@ -2,72 +2,94 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Gajani Ahmed Syed | Java Backend Developer</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Gajani Ahmed Syed | Portfolio</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+    header, footer {
+      background-color: #343a40;
+      color: white;
+      padding: 2rem 0;
+    }
+    section {
+      padding: 4rem 0;
+    }
+    .bg-light-alt {
+      background-color: #f8f9fa;
+    }
+    a {
+      color: #0d6efd;
+      text-decoration: none;
+    }
+  </style>
 </head>
 <body>
-  <header>
-    <h1>Gajani Ahmed Syed</h1>
-    <p>Java Backend Developer | Spring Boot | DSA | Cloud Certified</p>
-    <p>Actively looking for backend SDE roles in product-based companies 🚀</p>
-  </header>
 
-  <section id="about">
-    <h2>About Me</h2>
-    <p>I'm a Java backend developer with 3 years of experience delivering secure, scalable APIs in banking and insurance. Solved 200+ Leetcode problems. Certified in AWS and Azure.</p>
-  </section>
+<header class="text-center">
+  <h1>Gajani Ahmed Syed</h1>
+  <p class="lead">Java Backend Developer | Spring Boot | DSA | Cloud Certified</p>
+  <p>Actively looking for SDE roles in product-based companies 🚀</p>
+</header>
 
-  <section id="skills">
-    <h2>Skills</h2>
-    <ul>
-      <li><strong>Languages:</strong> Java, Python, SQL, JavaScript</li>
-      <li><strong>Frameworks:</strong> Spring Boot, Spring Security, JUnit, Mockito</li>
-      <li><strong>Databases:</strong> MySQL</li>
-      <li><strong>Cloud:</strong> AWS, Azure</li>
-      <li><strong>Tools:</strong> Git, GitHub, Docker, Postman, Jira, IntelliJ</li>
-    </ul>
-  </section>
+<section class="container">
+  <h2>About Me</h2>
+  <p>I’m a Java backend developer with 3 years of experience working on scalable and secure APIs in banking and insurance. I’ve solved 204+ Leetcode problems and hold certifications in AWS Cloud Practitioner and Microsoft Azure Administrator.</p>
+</section>
 
-  <section id="experience">
-    <h2>Experience</h2>
-    <h3>Associate Consultant, Infosys</h3>
-    <p>Jan 2025 – Present</p>
-    <p>Developing and optimizing backend APIs for customer data services at Bank of America.</p>
+<section class="container bg-light-alt">
+  <h2>Skills</h2>
+  <ul>
+    <li><strong>Languages:</strong> Java, Python, SQL, JavaScript</li>
+    <li><strong>Frameworks:</strong> Spring Boot, Spring Security, JUnit, Mockito</li>
+    <li><strong>Databases:</strong> MySQL</li>
+    <li><strong>Cloud:</strong> AWS, Azure</li>
+    <li><strong>Tools:</strong> Git, GitHub, Docker, Postman, Jira, IntelliJ</li>
+  </ul>
+</section>
 
-    <h3>System Engineer, TCS</h3>
-    <p>Oct 2021 – Mar 2024</p>
-    <p>Built backend services for Aviva insurance, improved system reliability and security.</p>
-  </section>
+<section class="container">
+  <h2>Experience</h2>
+  <h5>Associate Consultant, Infosys</h5>
+  <p>Jan 2025 – Present</p>
+  <p>Developing Spring Boot REST APIs for Bank of America, with secure and scalable customer data systems.</p>
+  <h5>System Engineer, TCS</h5>
+  <p>Oct 2021 – Mar 2024</p>
+  <p>Built backend systems for Aviva Insurance. Enhanced system reliability and security.</p>
+</section>
 
-  <section id="projects">
-    <h2>Projects</h2>
-    <h3><a href="https://github.com/gajiniahmed343/Task-Manager" target="_blank">Task Manager Web App</a></h3>
-    <p>Built with Spring MVC, MySQL, Spring Security, and deployed on Heroku. Supports login, CRUD operations, and RBAC.</p>
-  </section>
+<section class="container bg-light-alt">
+  <h2>Projects</h2>
+  <p><strong><a href="https://github.com/gajiniahmed343/Task-Manager" target="_blank">Task Manager Web App</a></strong><br>
+  Spring MVC + MySQL CRUD app with login, role-based access, deployed on Heroku.</p>
+</section>
 
-  <section id="leetcode-certifications">
-    <h2>LeetCode & Certifications</h2>
-    <ul>
-      <li>204+ LeetCode problems solved</li>
-      <li>AWS Certified Cloud Practitioner</li>
-      <li>Microsoft Azure Administrator Associate (AZ-104)</li>
-    </ul>
-  </section>
+<section class="container">
+  <h2>LeetCode & Certifications</h2>
+  <ul>
+    <li>204+ LeetCode problems solved</li>
+    <li>AWS Certified Cloud Practitioner</li>
+    <li>Microsoft Azure Administrator Associate (AZ-104)</li>
+  </ul>
+</section>
 
-  <section id="contact">
-    <h2>Contact Me</h2>
-    <ul>
-      <li>Email: <a href="mailto:gajiniahmed343@gmail.com">gajiniahmed343@gmail.com</a></li>
-      <li><a href="https://www.linkedin.com/in/gajani-ahmed-syed/" target="_blank">LinkedIn</a></li>
-      <li><a href="https://github.com/gajiniahmed343" target="_blank">GitHub</a></li>
-      <li><a href="https://leetcode.com/u/GajaniAhmed/" target="_blank">LeetCode</a></li>
-    </ul>
-  </section>
+<section class="container bg-light-alt">
+  <h2>Contact</h2>
+  <ul>
+    <li>Email: <a href="mailto:gajiniahmed343@gmail.com">gajiniahmed343@gmail.com</a></li>
+    <li><a href="https://www.linkedin.com/in/gajani-ahmed-syed/" target="_blank">LinkedIn</a></li>
+    <li><a href="https://github.com/gajiniahmed343" target="_blank">GitHub</a></li>
+    <li><a href="https://leetcode.com/u/GajaniAhmed/" target="_blank">LeetCode</a></li>
+  </ul>
+</section>
 
-  <footer>
-    <p>© 2025 Gajani Ahmed Syed. All rights reserved.</p>
-  </footer>
+<footer class="text-center">
+  <p>© 2025 Gajani Ahmed Syed. All rights reserved.</p>
+</footer>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
